--- a/src/styles/components/Countdown.module.css
+++ b/src/styles/components/Countdown.module.css
@@ -35,7 +35,7 @@
   margin: 0 0.5rem;
 }
 
-.CountdownButton {
+.countdownButton {
   width: 100%;
   height: 5rem;
   margin-top: 2rem;
@@ -51,6 +51,22 @@
   transition: background-color 0.2s;
 }
 
-.CountdownButton:hover {
+.countdownButton:not(:disabled):hover {
   background: var(--blue-dark);
+}
+
+.countdownButtonActive {
+  background-color: var(--white);
+  color: var(--title);
+}
+
+.countdownButtonActivenot:not(:disabled):hover {
+  background-color: var(--red);
+  color: var(--white);
+}
+
+.countdownButton:disabled {
+  background: var(--white);
+  color: var(--text);
+  cursor: not-allowed;
 }
